# Configurator

./: .gitignore  API.md  CHANGELOG.md  Configurator.cabal  EXAMPLES.md  LICENSE  README.MD  README.md
.github/workflows/: haskell-ci.yml
app/: Main.hs  config.json  config.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: Configurator-0.1.0.0-inplace.conf  package.cache
src/: Configurator.hs
src/Configurator/: Internal.hs  TH.hs  Validator.hs
test/: Main.hs  ValidatorTests.hs
test/Configurator/Internal/: Test.hs
