cabal-version:      2.4
name:               Configurator
version:            0.1.0.0
synopsis:           A type-safe configuration parser.
description:        Type-safe configuration parser (YAML/JSON/ENV) with automatic documentation generation.
homepage:           https://github.com/C0dwizigurator
bug-reports:        https://github.com/C0dwizigurator/issues
license:            MIT
license-file:       LICENSE
author:             C0dwiz
maintainer:         codwiz@yandex.ru
copyright:          2025 C0dwiz
category:           Configuration
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Configurator
    other-modules:
        Configurator.Internal,
        Configurator.TH
    build-depends:
        base >= 4.7 && < 5,
        aeson,
        yaml,
        text,
        bytestring,
        containers,
        unordered-containers,
        template-haskell,
        directory
    hs-source-dirs:   src
    default-language: Haskell2010

executable example-usage
    main-is:          Main.hs
    build-depends:
        base,
        Configurator,
        text,
        containers,
        aeson
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall