cabal-version:      2.4
name:               Configurator
version:            0.2.0.0
synopsis:           A type-safe configuration parser.
description:        Type-safe configuration parser (YAML/JSON) with compile-time validation, runtime validation constraints, and debugging support.
homepage:           https://github.com/C0dwiz/Configurator
bug-reports:        https://github.com/C0dwiz/Configurator/issues
license:            MIT
license-file:       LICENSE
author:             C0dwiz
maintainer:         codwiz@yandex.ru
copyright:          2025 C0dwiz
category:           Configuration
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Configurator,
        Configurator.Internal,
        Configurator.TH,
        Configurator.Validator
    hs-source-dirs:   src
    build-depends:
        base >= 4.7 && < 5,
        aeson,
        yaml,
        text,
        bytestring,
        containers,
        unordered-containers,
        template-haskell,
        directory,
        filepath,
        regex-tdfa,
        vector,
        scientific
    default-language: Haskell2010

executable example-usage
    main-is:          Main.hs
    build-depends:
        base,
        Configurator,
        text,
        containers,
        aeson,
        vector,
        scientific
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite configurator-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base >= 4.7 && < 5,
        HUnit,
        Configurator,
        aeson,
        text,
        containers,
        unordered-containers,
        vector,
        scientific
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N